# spark

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  agent.py  config.py  pyproject.toml  server.py  spark.py
.claude/: settings.local.json
learning_loop/: catalog.yaml  optimize_log.json  progress.json  runner.py
learning_loop/golden/: get_line_parameters__line_names-None.json  list_elements__element_type-bus.json  list_elements__element_type-generator.json  list_elements__element_type-line.json  list_elements__element_type-load.json  list_elements__element_type-transformer.json  modify_generator__active_power_mw-50.0_reactive_power_mvar-20.0.json  modify_generator__voltage_setpoint_pu-1.02.json  modify_load__active_power_mw-30.0_reactive_power_mvar-10.0.json  modify_load__active_power_mw-50.0.json  modify_load__scaling_factor-1.2.json  modify_shunt__n_steps_active-2.json  modify_shunt__reactive_power_mvar-10.0.json  modify_transformer_connection__hv_connection-YN_lv_connection-D.json  modify_voltage_setpoint__element_type-external_grid_voltage_setpoint_pu-1.0.json  modify_voltage_setpoint__element_type-generator_voltage_setpoint_pu-1.03.json  run_power_flow.json  run_short_circuit__fault_type-single_phase_ground_standard-iec_60909_target_bus-S-E_A_13.8_kV.json  run_short_circuit__fault_type-three_phase_standard-complete_target_bus-S-E_C_13.8_kV.json  run_short_circuit__fault_type-three_phase_standard-iec_60909_target_bus-S-E_B_110_kV.json  set_element_status__activate-False_element_type-generator.json  set_transformer_tap__tap_position--1.json  (+4 more)
projects/: 2512-bus.pfd  7-bus.pfd
prompts/: powerfactory.md  system.md  system.py
scripts/: test_gcs_upload.py
static/: index.html
(+168 files in other folders)
