[project]
name = "spark"
version = "0.1.0"
description = "Agente de código eléctrico para DIgSILENT PowerFactory"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Valdivia Tech", email = "cristian.valdivia@alumnos.usm.cl" },
]
dependencies = [
    "google-genai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/valdivia-tech/spark"

[project.scripts]
spark = "spark:main"
spark-server = "server:main"

[project.optional-dependencies]
server = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
